--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 .App{
   font-family: 'Poppins', sans-serif;
+}
+ */
+
+ 
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&family=Poppins:wght@200&display=swap');
+.App{
+  font-family: 'Heebo', sans-serif;
+font-family: 'Poppins', sans-serif;
+color:black;
 }
